apps/code-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: code-server
    pod-security.kubernetes.io/enforce: restricted
