apps/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: code-server
spec:
  selector:
    app.kubernetes.io/name: code-server
  ports:
    - name: http
      port: 8080
      targetPort: http
